<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Weather</string>

    <string name="about">About</string>
    <string name="air_pressure">Air pressure: %s hPa</string>
    <string name="amoled_black">Amoled Black</string>
    <string name="amoled_black_message">This feature requires Android S (API 31) and system-wide dark mode enabled</string>
    <string name="amoled_black_summary">Apply amoled black color in dark theme</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="centigrade">Centigrade (&#176;C)</string>
    <string name="copyright_text">Copyright: ©2023–2026, sunilpaulmathew</string>
    <string name="credits">Credits</string>
    <string name="daily_forecast">Daily forecast</string>
    <string name="days">%s days</string>
    <string name="edit_location">Edit location</string>
    <string name="edit_location_warning">Please disable location service for manual editing</string>
    <string name="exit_confirmation_message">Press back again to exit</string>
    <string name="fahrenheit">Fahrenheit (&#176;F)</string>
    <string name="forecast_days">Forecast Days</string>
    <string name="help_message">Need help? click here</string>
    <string name="humidity">Humidity: %s%%</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location</string>
    <string name="location_data_failed">Failed to load location data</string>
    <string name="location_access_request">Enable location access for accurate weather data</string>
    <string name="location_service">Location Service</string>
    <string name="location_service_summary">Use location service when available</string>
    <string name="location_summary_search">Search for a location</string>
    <string name="location_summary_manual">or manually provide the following parameters</string>
    <string name="longitude">Longitude</string>
    <string name="network_connection_failed">Network connection failed. Aborting…</string>
    <string name="precipitation">Precipitation: %s%%</string>
    <string name="preferences">Preferences</string>
    <string name="request_access">Request access</string>
    <string name="report_issue">Report an Issue</string>
    <string name="report_issue_summary">Raise an issue at GitHub</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">Weather is an open-source application, which is ready to accept contributions from the development community. Click here to check out the source code</string>
    <string name="temperature_feels_like">Feels like %s</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="temperature_unit_centigrade" translatable="false">&#176;C</string>
    <string name="temperature_unit_fahrenheit" translatable="false">&#176;F</string>
    <string name="today">Today</string>
    <string name="translations">Translations</string>
    <string name="translations_summary">Help me to translate this app. Click here to visit POEditor localization project</string>
    <string name="transparent_background">Transparent Background</string>
    <string name="transparent_background_summary">Use transparent background for weather widgets</string>
    <string name="uv_index">UV Index: %s</string>
    <string name="uv_index_alert_high">Avoid being outside during midday hours! Make sure you seek shade! Shirt, sunscreen and hat are a must!</string>
    <string name="uv_index_alert_medium">Seek shade during midday hours! Slip on a shirt, slop on sunscreen and slap on hat!</string>
    <string name="uv_index_alert_safe">You can safely enjoy being outside!</string>
    <string name="uv_index_alert_title">UV index alert for %s</string>
    <string name="visibility">Visibility: %s m</string>
    <string name="weather_alert">Weather Alerts</string>
    <string name="weather_alert_message">%s is expected after an hour!</string>
    <string name="weather_alert_summary">Show notifications on extreme weather conditions</string>
    <string name="weather_alert_title">Weather alert for %s</string>
    <string name="weather_code_clear">Clear</string>
    <string name="weather_code_clear_mostly">Mostly clear</string>
    <string name="weather_code_cloudy_partly">Partly cloudy</string>
    <string name="weather_code_overcast">Overcast</string>
    <string name="weather_code_fog">Fog</string>
    <string name="weather_code_rim_fog">Rime fog</string>
    <string name="weather_code_drizzle_light">Light drizzle</string>
    <string name="weather_code_drizzle_moderate">Moderate drizzle</string>
    <string name="weather_code_drizzle_dense">Dense drizzle</string>
    <string name="weather_code_drizzle_freezing_light">Light freezing drizzle</string>
    <string name="weather_code_drizzle_freezing_dense">Dense freezing drizzle</string>
    <string name="weather_code_rain_light">Light rain</string>
    <string name="weather_code_rain_moderate">Moderate rain</string>
    <string name="weather_code_rain_heavy">Heavy rain</string>
    <string name="weather_code_rain_freezing_light">Light freezing rain</string>
    <string name="weather_code_rain_freezing_heavy">Heavy freezing rain</string>
    <string name="weather_code_snowfalls_light">Light snowfall</string>
    <string name="weather_code_snowfalls_moderate">Moderate snowfall</string>
    <string name="weather_code_snowfalls_heavy">Heavy snowfall</string>
    <string name="weather_code_snow_grains">Snow grains</string>
    <string name="weather_code_snow_showers_light">Light snow showers</string>
    <string name="weather_code_snow_showers_heavy">Heavy snow showers</string>
    <string name="weather_code_rain_showers_light">Light rain showers</string>
    <string name="weather_code_rain_showers_moderate">Moderate rain showers</string>
    <string name="weather_code_rain_showers_heavy">Heavy rain showers</string>
    <string name="weather_code_thunderstorm">Thunderstorm</string>
    <string name="weather_expected_title">Weather conditions expected on %s:</string>
    <string name="weather_status_failed">Failed to load weather data</string>
    <string name="wind_speed">Wind speed: %s Km/h</string>
</resources>