<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:gravity="center" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical" >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                app:cardCornerRadius="15dp" >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_summary_search"
                        android:textColor="@color/color_accent"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:clickable="false"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/location"
                        android:layout_margin="10dp"
                        android:padding="5dp" >

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:inputType="textMultiLine"
                            android:gravity="center_vertical"
                            android:imeOptions="actionSend"
                            android:cursorVisible="true"
                            android:padding="10dp"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="15dp"
                        android:visibility="gone" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                app:cardCornerRadius="15dp" >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_summary_manual"
                        android:textColor="@color/color_accent"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:clickable="false"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/latitude"
                        android:layout_margin="10dp"
                        android:padding="5dp" >

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:inputType="textMultiLine"
                            android:gravity="center_vertical"
                            android:imeOptions="actionSend"
                            android:cursorVisible="true"
                            android:padding="10dp"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/longitude"
                        android:layout_margin="10dp"
                        android:padding="5dp" >

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:inputType="textMultiLine"
                            android:gravity="center_vertical"
                            android:imeOptions="actionSend"
                            android:cursorVisible="true"
                            android:padding="10dp"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/apply_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/color_accent"
                        app:strokeColor="@color/color_accent"
                        android:layout_gravity="center|end"
                        android:layout_margin="15dp"
                        app:cardCornerRadius="15dp" >

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_select"
                            android:tint="@color/color_black"
                            android:layout_margin="5dp"
                            android:background="@null"
                            android:clickable="false" />
                    </com.google.android.material.card.MaterialCardView>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>